--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,12 +61,13 @@ jobs:
           cache-dependency-path: |
             requirements/base.txt
             requirements/local.txt
+            requirements/production.txt
 
       - name: Install Dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r requirements/base.txt
           pip install -r requirements/local.txt
+          pip install -r requirements/production.txt
 
       - name: Test with pytest
         run: pytest
