--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -1,32 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: db
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app: db
   template:
     metadata:
       labels:
-        app: postgres
+        app: db
     spec:
       containers:
-      - name: postgres
+      - name: db
         image: postgres:16
-        ports:
-        - containerPort: 5432
         env:
         - name: POSTGRES_DB
           value: "socialmedia"
         - name: POSTGRES_USER
           value: "postgres"
         - name: POSTGRES_PASSWORD
-          value: "3Vwh3KsM"
+          value: "8426"
+        ports:
+        - containerPort: 5432
         volumeMounts:
-        - name: postgres-storage
-          mountPath: /var/lib/postgresql/data
+        - mountPath: /var/lib/postgresql/data
+          name: postgres-storage
       volumes:
       - name: postgres-storage
         persistentVolumeClaim:
