Final Kubernetes changes

--- a/k8s/db-deployment.yaml
+++ b/k8s/db-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: db
-        image: postgres:16
+        image: erikmirkovic/postgres:16
         env:
         - name: POSTGRES_DB
           value: "socialmedia"
