--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - backend
 
   web:
+    image: erikmirkovic/social-network-web:latest
     build: .
     volumes:
       - .:/app
