--- a/k8s/web-deployment.yaml
+++ b/k8s/web-deployment.yaml
@@ -26,6 +26,8 @@ spec:
           value: "config.settings.local"
         - name: DJANGO_ENV
           value: "development"
+        - name: REDIS_URL
+          value: "redis://redis:6379/1"
         ports:
         - containerPort: 8000
         volumeMounts:
