--- a/k8s/redis-deployment.yaml
+++ b/k8s/redis-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: redis
-        image: redis:alpine
+        image: erikmirkovic/redis:alpine
         ports:
         - containerPort: 6379
