--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,7 @@ services:
     build: .
     volumes:
       - .:/app
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
+      - media_data:/app/socialmedia/media
     ports:
       - "8000:8000"
     depends_on:
@@ -43,5 +42,4 @@ networks:
 
 volumes:
   postgres_data:
-  static_volume:
-  media_volume:
+  media_data:
