--- a/k8s/redis-service.yaml
+++ b/k8s/redis-service.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   name: redis
 spec:
+  type: ClusterIP
+  ports:
+  - port: 6379
+    targetPort: 6379
   selector:
     app: redis
-  ports:
-  - protocol: TCP
-    port: 6379
-    targetPort: 6379
