--- a/k8s/media-pv.yaml
+++ b/k8s/media-pv.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-static
+  name: media-pv
 spec:
-  storageClassName: manual
   capacity:
     storage: 1Gi
   accessModes:
     - ReadWriteMany
   hostPath:
-    path: "/mnt/data/static"
+    path: "/mnt/data/media"
