--- a/k8s/postgres-pv.yaml
+++ b/k8s/postgres-pv.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: pv-media
+  name: postgres-pv
 spec:
-  storageClassName: manual
   capacity:
     storage: 1Gi
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   hostPath:
-    path: "/mnt/data/media"
+    path: "/mnt/data/postgresql"
